# HACKMETU-2026

gazisiber/: README.md
gazisiber/lider-ahenk-docs/: mkdocs.yml
kovan/: .gitignore  AGENTS.md  LICENSE  README.md  package.json  pnpm-lock.yaml
kovan/anomaly-model/: .gitignore  README.md  attdap.py  requirements.txt
kovan/client-go/: .gitignore  Makefile  README.md  go.mod  installer.go  keylogger.go  keylogger_linux.go  keylogger_windows.go  main.go  pty_handler.go  pty_handler_windows.go
kovan/docs/: README.md
kovan/frontend/: README.md  index.html  package.json  tsconfig.app.json  vite.config.ts
kovan/presentation/: README.md  index.html  package.json  tsconfig.tsbuildinfo
kovan/screenshots/: README.md
kovan/scripts/: README.md  analyze-pardus.mjs  analyze-pardus.ts  screenshot-all.ts
kovan/server/: README.md  package-lock.json  package.json  tsconfig.json
kovan/shared/: README.md  package.json
kovan/video/: package.json
lider-bekci/: .gitignore  README.md  start_demo.sh
lider-bekci/bekci-usb-plugin/: README.md  client.py  main.py  pyproject.toml
lider-bekci/evidence-service/: .gitignore  app.py  compliance_checker.py  database.py  lider_sync.py  models.py  requirements.txt  seed_data.py  session_watcher.py  simulate_client.py  usb_anomaly_agent.py
lider-bekci/liderui/: .gitignore  README.md  package.json  vue.config.js
operationscore/: License.txt  README.md  conftest.py  demo.py  operationscore-agent_0.1.0_all.deb  requirements.txt  sql_info.md
operationscore/agent/: __init__.py  collector.py  fake_agents.py  ops_collect.py  (+1 more)
(+204 files in other folders)
